Prepend routes to not have catch-alls take priority over swagger routes

--- a/examples/swaggerapi/conf/app.conf
+++ b/examples/swaggerapi/conf/app.conf
@@ -93,10 +93,18 @@ i18n.default_language = en
 # Allows Routes like this:
 #  `Static.ServeModule("modulename","public")`
 module.static=github.com/revel/modules/static
+
+# Include the swaggerapi module
+# NOTE the name `swaggerapi` must be lowercase and exactly `swaggerapi`
+# if you want to use the built-in Swagger-UI controller
 module.swaggerapi=github.com/waiteb3/revel-swagger/modules/swaggerapi
 
 # Swagger spec location
 swaggerapi.specs=swagger/swagger.yml
+
+# The built-in Swagger-UI controllers are routed to `/@api`, if the basePath is specified as `/api`.
+# You can enable/disable the module from automatically adding the routes by setting the property to true/false.
+swaggerapi.add-ui = true
 
 ################################################################################
 # Section: dev
